--- a/migration/build.gradle
+++ b/migration/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 
     id 'application'
+    id 'org.flywaydb.flyway' version '9.16.3'
 }
 
 repositories {
@@ -19,10 +20,14 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
 }
 
-application {
+flyway {
 
-    mainClass = 'com.goit.fry.migration.App'
+    url = "jdbc:h2:$rootDir/migration/megasoft"
+    schemas = ['megasoft']
+    locations = ['filesystem:sql']
+    cleanDisabled = false
 }
+
 
 tasks.named('test') {
 
