added FlywayMigration class

--- a/migration/build.gradle
+++ b/migration/build.gradle
@@ -13,21 +13,27 @@ repositories {
 dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-    //testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
     implementation 'com.h2database:h2:2.1.214'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+
+    implementation 'org.flywaydb:flyway-core:9.16.3'
 }
 
 flyway {
 
     url = "jdbc:h2:$rootDir/migration/megasoft"
+    baselineOnMigrate = true
     schemas = ['megasoft']
-    locations = ['filesystem:sql']
+    locations = ["filesystem:$rootDir/migration/src/main/resources/db/migration"]
     cleanDisabled = false
 }
 
+application {
+
+    mainClass = 'com.goit.fry.migration.FlywayMigration'
+}
 
 tasks.named('test') {
 
